GPII-153: Punctuation Verbosity custom adjuster styled. Images completely replaced by font icons.

--- a/demos/speakTextAdjusterGroup/index.html
+++ b/demos/speakTextAdjusterGroup/index.html
@@ -14,7 +14,7 @@
         <script type="text/javascript" src="../../src/shared/adjusters/js/combobox.js"></script>
 
         <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
-        <!-- <script type="text/javascript" src="../../src/shared/adjusters/js/GPIIStore.js"></script>-->
+        <script type="text/javascript" src="../../src/shared/adjusters/js/GPIIStore.js"></script>
 
         <script type="text/javascript" src="../../src/shared/adjusters/js/speakTextPanels.js"></script>
         <script type="text/javascript" src="../../src/shared/adjusters/js/speakTextCollectivePanel.js"></script>
