GPII-153: Code refactoring.

--- a/src/shared/adjusters/html/speakTextCollectiveTemplate.html
+++ b/src/shared/adjusters/html/speakTextCollectiveTemplate.html
@@ -44,7 +44,7 @@
                     <label class="gpii-punctuationVerbosity-option-label" for="radioButton-option"></label>
                 </div>
             </div>
-        </div><br>
+        </div>
 
         <div class="speakText-announceCapitals-element">
             <input type="checkbox" id="announce-uppercase" class="gpii-announceCapitals" />
