Renamed the greek locale from "gr" to "el". Setting the default browser's language when starting app.

--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -40,7 +40,7 @@
     		<label class="fl-uiOptions-language-label" for="fl-uiOptions-language-select"></label>
     		<select class="fl-uiOptions-language-select" id="fl-uiOptions-language-select">
 			  <option value="en">English</option>
-			  <option value="gr">Ελληνικά</option>
+			  <option value="el">Ελληνικά</option>
 			  <option value="de">Deutsch</option>
 			  <option value="es">Español</option>
 			</select>
