--- a/src/shared/adjusters/html/speakTextCollectiveTemplate.html
+++ b/src/shared/adjusters/html/speakTextCollectiveTemplate.html
@@ -20,14 +20,16 @@
         </div><br><br><br>
     </div>
 
-    <div id="speech-rate" class="speech-rate-class">
-        <div class="gpii-speechRate">
-            <label class="gpii-speechRate-label speak-text-label" for="speech-rate-input" id="speechRateLabel"></label><br>
-            <label class="gpii-textfieldStepper-decrement gpii-speechRate-minus" id="speechRateMinus"></label>
-            <input type="text" class="gpii-textfieldStepper-field fl-inputs" id="speechRate"/>
-            <label class="gpii-textfieldStepper-increment gpii-speechRate-plus" id="speechRatePlus"></label>
-        </div>
-    </div><br>
+    <div class="partially-expanded">
+        <div id="speech-rate" class="speech-rate-class">
+            <div class="gpii-speechRate">
+                <label class="gpii-speechRate-label speak-text-label" for="speech-rate-input" id="speechRateLabel"></label><br>
+                <label class="gpii-textfieldStepper-decrement gpii-speechRate-minus" id="speechRateMinus"></label>
+                <input type="text" class="gpii-textfieldStepper-field fl-inputs" id="speechRate"/>
+                <label class="gpii-textfieldStepper-increment gpii-speechRate-plus" id="speechRatePlus"></label>
+            </div>
+        </div><br>
+    </div>
 
     <div class="fully-expanded">
         <div class="speakText-auditoryOutLanguage-element ui-widget">
@@ -80,9 +82,11 @@
         </div>
     </div>
 
-    <div class="more-options">
-        <label for="moreOptions" class="more-options-icon"></label>
-        <input type="checkbox" class="more-options-checkbox"/>
-        <label for="moreOptions" class="more-options-label"></label>
+    <div class="partially-expanded">
+        <div class="more-options">
+            <label for="moreOptions" class="more-options-icon"></label>
+            <input type="checkbox" class="more-options-checkbox"/>
+            <label for="moreOptions" class="more-options-label"></label>
+        </div>
     </div>
 </div>
