--- a/src/shared/adjusters/html/newestSpeakText.html
+++ b/src/shared/adjusters/html/newestSpeakText.html
@@ -5,6 +5,12 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="../../src/shared/adjusters/css/style.css" />
     <title>Speak text</title>
+    
+    <script>
+        $(".control-button").click(function () {
+            location.reload();
+        });
+    </script>
 </head>
 
 <body>
@@ -18,9 +24,9 @@
 </form>
 
 <div class="fl-text-align-center fl-uiOptions-buttons">
-    <input class="flc-uiOptions-save fl-uiOptions-save" type="button" value="Save and apply" />
-    <input class="flc-uiOptions-reset" type="button" value="Reset and apply" />
-    <input class="flc-uiOptions-cancel fl-uiOptions-cancel" type="button" value="Cancel" />
+    <input class="flc-uiOptions-save fl-uiOptions-save control-button" type="button" value="Save and apply" />
+    <input class="flc-uiOptions-reset control-button" type="button" value="Reset and apply" />
+    <input class="flc-uiOptions-cancel fl-uiOptions-cancel control-button" type="button" value="Cancel" />
 </div>
 </body>
 </html>
