Moved the sliding logic of Contrast to PMT.js as with increase size. Also, the markup for the Contrast header is in PMTUIOptions.html now. However, now i cannot update the model with the changed value since the checkbox and the adjuster component seem to exist in different contexts.

--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -1,8 +1,20 @@
 <form id="options" action="" class="fl-uiOptions fl-focus">
 	<div class="fl-container-flex60 fl-force-left preference flc-uiOptions-contrastPanel">
 
+		<input type="checkbox" id="preferenceSwitchContrast" class="flc-uiOptions-constrastInput"/>
+		<div class="headerImage fl-adjuster-icons fl-adjuster-icons-sept-12">
+			<label class="headerTitle"></label>
+			<div class="headerImageTick fl-adjuster-icons fl-adjuster-icons-sept-12"></div>
+		</div>
+		<label class="headerTitle headerClickableLabel" for="preferenceSwitchContrast"></label>
+		
+		<input type="checkbox" id="addToMyPreferencesContrast"/>
+		<div class="fl-adjuster-icons fl-adjuster-icons-additional addToMyPreferencesStar">
+		</div>
+		<label class="addToMyPreferencesLabel" for="addToMyPreferencesContrast" tooltip-checked="" tooltip-unchecked="" title=""></label>
+		
 	    <div class="contrastPreferenceGroup">
-	        <div class="flc-uiOptions-contrast fl-uiOptions-text"></div>
+	        <div class="flc-uiOptions-contrast fl-uiOptions-category fl-uiOptions-text"></div>
 		</div>
 
     </div>
