--- a/src/explorationTool/html/ExplorationTool.html
+++ b/src/explorationTool/html/ExplorationTool.html
@@ -3,7 +3,7 @@
         <ul class="fl-uiOptions-panels">
             <li class="fl-uiOptions-panel">
                 <button class="flc-explorationTool-try fl-explorationTool-try">
-                    <span class="flc-explorationTool-tryLabel">Try something new</span>
+                    <span class="flc-explorationTool-tryLabel fl-explorationTool-tryLabel">Try something new</span>
                     <span class="fl-icon-arrow" aria-label="Arrow" role="presentation"></span>
                 </button>
             </li>
