--- a/demos/speakTextAdjusterGroup/index.html
+++ b/demos/speakTextAdjusterGroup/index.html
@@ -8,6 +8,10 @@
         <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/components/uiOptions/css/fss/fss-text-uio.css" />
         <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/components/uiOptions/css/UIOptions.css" />
 
+        <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" type="text/css" href="../../src/shared/adjusters/css/style.css" />
+
         <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
         <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
         <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
