--- a/src/shared/preview/html/uiOptionsCursorPreview.html
+++ b/src/shared/preview/html/uiOptionsCursorPreview.html
@@ -7,7 +7,7 @@
 </head>
 <body class="flc-uiOptions-preview-per-setting-body">
     <div class="flc-uiOptions-preview-per-setting-div">
-      <div class="flc-uiOptions-preview-per-setting-div-inner">
+      <div class="flc-uiOptions-preview-per-setting-div-inner flc-uiOptions-preview-per-setting-cursor-div">
             <div class="fl-adjuster-icons fl-adjuster-icons-sept-12 flc-uiOptions-preview-per-setting-cursor1"></div>
             <div class="fl-adjuster-icons fl-adjuster-icons-sept-12 flc-uiOptions-preview-per-setting-cursor2"></div>
             <div class="fl-adjuster-icons fl-adjuster-icons-sept-12 flc-uiOptions-preview-per-setting-cursor3"></div>
