Fixed the CSS class names according to Justin's comment: "by convention for Infusion we distinguish between classes that are used for styling (fl-) and those used for selectors in javascript (flc-)"

--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -22,16 +22,16 @@
         <label class="addToMyPreferencesLabel" for="addToMyPreferencesIncreaseSize" tooltip-checked="" tooltip-unchecked="" title=""></label>
 
         <div class="increaseSizePreferenceGroup">
-            <div class="flc-uiOptions-text-size fl-uiOptions-category fl-uiOptions-text"></div>
-            <div class="flc-uiOptions-cursor-size fl-uiOptions-category fl-uiOptions-text"></div>
-            <div class="flc-uiOptions-magnifier fl-uiOptions-category fl-uiOptions-text"></div>
+            <div class="flc-uiOptions-text-size fl-uiOptions-category flc-uiOptions-category fl-uiOptions-text"></div>
+            <div class="flc-uiOptions-cursor-size fl-uiOptions-category flc-uiOptions-category fl-uiOptions-text"></div>
+            <div class="flc-uiOptions-magnifier fl-uiOptions-category flc-uiOptions-category fl-uiOptions-text"></div>
             
-            <div class="fl-uiOptions-category-hidden fl-uiOptions-text">
-                <div class="flc-uiOptions-magnifierPosition fl-uiOptions-category fl-uiOptions-text"></div>
-                <div class="flc-uiOptions-magnifierFollows fl-uiOptions-category fl-uiOptions-text"></div>
+            <div class="fl-uiOptions-category-hidden flc-uiOptions-category-hidden fl-uiOptions-text">
+                <div class="flc-uiOptions-magnifierPosition fl-uiOptions-category flc-uiOptions-category fl-uiOptions-text"></div>
+                <div class="flc-uiOptions-magnifierFollows fl-uiOptions-category flc-uiOptions-category fl-uiOptions-text"></div>
             </div>
 
-            <label class="moreLess fl-uiOptions-category">&nbsp;</label>
+            <label class="moreLess fl-uiOptions-category flc-uiOptions-category">&nbsp;</label>
         </div>    
     </div>
 
