--- a/src/shared/adjusters/html/UIOptionsTemplate-contrastNew.html
+++ b/src/shared/adjusters/html/UIOptionsTemplate-contrastNew.html
@@ -10,12 +10,12 @@
 </div>
 <label class="addToMyPreferencesLabel" for="addToMyPreferencesContrast" tooltip-checked="" tooltip-unchecked="" title=""></label>
 <br/>
-<div class="fl-uiOptions-category fl-uiOptions-text">
+<div class="fl-uiOptions-category flc-uiOptions-category fl-uiOptions-text">
     <h2><label class="flc-uiOptions-contrast-label"></label></h2>
 
-    <div class="flc-uiOptions-preview-per-setting-container">
-        <div class="fl-adjuster-icons flc-uiOptions-preview-per-setting-eye"></div>
-        <div class="flc-uiOptions-preview-per-setting-eye-background"></div>
-        <iframe class="flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
+    <div class="fl-uiOptions-preview-per-setting-container">
+        <div class="fl-adjuster-icons fl-uiOptions-preview-per-setting-eye"></div>
+        <div class="fl-uiOptions-preview-per-setting-eye-background"></div>
+        <iframe class="fl-uiOptions-preview-per-setting-frame flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
     </div>
 </div>
