--- a/src/shared/adjusters/html/UIOptionsTemplate-magnifierPosition.html
+++ b/src/shared/adjusters/html/UIOptionsTemplate-magnifierPosition.html
@@ -4,7 +4,7 @@
 <div class="flc-uiOptions-magnifierPositionRow fl-choice">
     <input type="radio" class="flc-uiOptions-magnifierPositionInput" name="magnifierPosition" id="magnifierPosition" />
     <div class="fl-indicator"></div>
-    <label for="magnifierPosition" class="flc-uiOptions-magnifierPosition-label" tooltip="" title="">
+    <label for="magnifierPosition" class="fl-uiOptions-magnifierPosition-label flc-uiOptions-magnifierPosition-label" tooltip="" title="">
         <span class="fl-preview-A"></span>
         <span class="fl-hidden-accessible"></span>
         <div class="fl-crossout"></div>
