--- a/src/shared/adjusters/html/UIOptionsTemplate-plusMinusNumerical.html
+++ b/src/shared/adjusters/html/UIOptionsTemplate-plusMinusNumerical.html
@@ -1,15 +1,15 @@
 <div class="flc-uiOptions-plus-minus-numerical">
     <h2><label class="flc-uiOptions-plus-minus-numerical-label"></label></h2>
     
-    <div class="flc-uiOptions-preview-per-setting-container">
-        <div class="fl-adjuster-icons flc-uiOptions-preview-per-setting-eye"></div>
-        <div class="flc-uiOptions-preview-per-setting-eye-background"></div>
-        <iframe class="flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
+    <div class="fl-uiOptions-preview-per-setting-container">
+        <div class="fl-adjuster-icons fl-uiOptions-preview-per-setting-eye"></div>
+        <div class="fl-uiOptions-preview-per-setting-eye-background"></div>
+        <iframe class="fl-uiOptions-preview-per-setting-frame flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
     </div>
 
-    <div class="flc-uiOptions-plus-minus-numerical-widget">
-        <label class="flc-uiOptions-plus-minus-numerical-minus"></label>
-        <input type="text" class="flc-uiOptions-plus-minus-numerical-value fl-inputs"/>
-        <label class="flc-uiOptions-plus-minus-numerical-plus"></label>
+    <div class="fl-uiOptions-plus-minus-numerical-widget">
+        <label class="fl-uiOptions-plus-minus-numerical-minus flc-uiOptions-plus-minus-numerical-minus"></label>
+        <input type="text" class="fl-uiOptions-plus-minus-numerical-value flc-uiOptions-plus-minus-numerical-value fl-inputs"/>
+        <label class="fl-uiOptions-plus-minus-numerical-plus flc-uiOptions-plus-minus-numerical-plus"></label>
     </div>
 </div>
