--- a/src/shared/adjusters/html/UIOptionsTemplate-cursorSize.html
+++ b/src/shared/adjusters/html/UIOptionsTemplate-cursorSize.html
@@ -1,10 +1,10 @@
 <div class="flc-uiOptions-cursor-size">
     <h2><!-- <span class="fl-icon-size"></span> --><label class="flc-uiOptions-cursor-size-label" for="cursor-size"></label></h2>
 
-    <div class="fl-adjuster-icons flc-uiOptions-preview-per-setting-container">
-        <div class="fl-adjuster-icons flc-uiOptions-preview-per-setting-eye"></div>
-        <div class="flc-uiOptions-preview-per-setting-eye-background"></div>
-        <iframe class="flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
+    <div class="fl-adjuster-icons fl-uiOptions-preview-per-setting-container">
+        <div class="fl-adjuster-icons fl-uiOptions-preview-per-setting-eye"></div>
+        <div class="fl-uiOptions-preview-per-setting-eye-background"></div>
+        <iframe class="fl-uiOptions-preview-per-setting-frame flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
     </div>
 
     <div>
