--- a/src/shared/adjusters/html/UIOptionsTemplate-magnifierFollows.html
+++ b/src/shared/adjusters/html/UIOptionsTemplate-magnifierFollows.html
@@ -1,7 +1,7 @@
 <h2>
     <label class="flc-uiOptions-magnifierFollows-heading"></label>
 </h2>
-<div class="flc-uiOptions-magnifierFollowsRow fl-choice">
+<div class="fl-uiOptions-magnifierFollowsRow flc-uiOptions-magnifierFollowsRow fl-choice">
     <input type="checkbox" class="flc-uiOptions-magnifierFollowsInput" name="magnifierFollows" id="magnifierFollows" />
     <!-- <div class="fl-indicator"></div> -->
     <label for="magnifierFollows" class="flc-uiOptions-magnifierFollows-label">
