This is the best i could do for making the increase size extra adjusters "model bound instead of DOM dependent".

--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -26,12 +26,13 @@
             <div class="flc-uiOptions-cursor-size fl-uiOptions-category flc-uiOptions-category fl-uiOptions-text"></div>
             <div class="flc-uiOptions-magnifier fl-uiOptions-category flc-uiOptions-category fl-uiOptions-text"></div>
             
+	        <input type="checkbox" id="preferenceSwitchIncreaseSizeExtra"/>
             <div class="fl-uiOptions-category-hidden flc-uiOptions-category-hidden fl-uiOptions-text">
                 <div class="flc-uiOptions-magnifierPosition fl-uiOptions-category flc-uiOptions-category fl-uiOptions-text"></div>
                 <div class="flc-uiOptions-magnifierFollows fl-uiOptions-category flc-uiOptions-category fl-uiOptions-text"></div>
             </div>
 
-            <label class="moreLess fl-uiOptions-category flc-uiOptions-category">&nbsp;</label>
+            <label for="preferenceSwitchIncreaseSizeExtra" class="moreLess fl-uiOptions-category flc-uiOptions-category">&nbsp;</label>
         </div>    
     </div>
 
