Totally messed-up version.Trying to merge all "Increase size" adjusters to a single re-usable component.

--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -28,6 +28,7 @@
 
     <!-- The custom adjusters JS files -->
     <script type="text/javascript" src="../../src/shared/adjusters/js/ContrastAdjuster.js"></script>
+    <script type="text/javascript" src="../../src/shared/adjusters/js/IncreaseSizeAdjuster.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/PlusMinusAdjuster.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/TextSizeAdjuster.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/CursorSizeAdjuster.js"></script>
