GPII-153: Save/Reset/Cancel now doesn't break the UI, most configuration (events, listeners, invokers) now in speakTextCollectivePanel.js.

--- a/src/shared/adjusters/html/newestSpeakText.html
+++ b/src/shared/adjusters/html/newestSpeakText.html
@@ -5,3 +5,9 @@
         </div>
     </div>
 </form>
+
+<div class="fl-text-align-center fl-uiOptions-buttons">
+    <input class="flc-uiOptions-save fl-uiOptions-save" type="button" />
+    <input class="flc-uiOptions-reset" type="button" />
+    <input class="flc-uiOptions-cancel fl-uiOptions-cancel" type="button" />
+</div>
