PlusMinusAdjuster is not reused so i had to distinguish between textSize and magnifier.

--- a/src/shared/adjusters/html/UIOptionsTemplate-increaseSize.html
+++ b/src/shared/adjusters/html/UIOptionsTemplate-increaseSize.html
@@ -51,17 +51,20 @@
 		</div>
 	</div>
 	
-	<div class="fl-uiOptions-category flc-uiOptions-category fl-uiOptions-text">
-		<div class="flc-uiOptions-magnifier">
-		    <h2><!-- <span class="fl-icon-size"></span> --><label class="flc-uiOptions-magnifier-label" for="magnifier"></label></h2>
-		    <div class="fl-inputs">
-		        <div class="fl-force-left">
-		            <div class="flc-textfieldSlider-slider fl-force-left fl-slider fl-slider-horz"> </div>
-		        </div>
-		        <div class="fl-slider-input" style=""><input id="magnifier" class="flc-textfieldSlider-field" type="text" /> <span class="flc-uiOptions-multiplier"></span></div>
-		        <br/>
-		        <div class="fl-force-left fl-icon-magnifierOFF"></div>
-		        <div class="fl-force-right fl-icon-magnifierMAX"></div>            
+	<div class="flc-uiOptions-magnifier fl-uiOptions-category flc-uiOptions-category fl-uiOptions-text">
+		<div class="flc-uiOptions-plus-minus-numerical">
+		    <h2><label class="flc-uiOptions-plus-minus-numerical-label-magnifier"></label></h2>
+		    
+		    <div class="fl-uiOptions-preview-per-setting-container">
+		        <div class="fl-adjuster-icons fl-uiOptions-preview-per-setting-eye"></div>
+		        <div class="fl-uiOptions-preview-per-setting-eye-background"></div>
+		        <iframe class="fl-uiOptions-preview-per-setting-frame flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
+		    </div>
+		
+		    <div class="fl-uiOptions-plus-minus-numerical-widget">
+		        <label class="fl-uiOptions-plus-minus-numerical-minus flc-uiOptions-plus-minus-numerical-minus-magnifier"></label>
+		        <input type="text" class="fl-uiOptions-plus-minus-numerical-value flc-uiOptions-plus-minus-numerical-value-magnifier fl-inputs"/>
+		        <label class="fl-uiOptions-plus-minus-numerical-plus flc-uiOptions-plus-minus-numerical-plus-magnifier"></label>
 		    </div>
 		</div>
 	</div>
