GPII-153: Unused events and functions removed. Show/Hide events fired in single function now.

--- a/src/shared/adjusters/html/speakTextCollectiveTemplate.html
+++ b/src/shared/adjusters/html/speakTextCollectiveTemplate.html
@@ -84,9 +84,9 @@
 
     <div class="partially-expanded">
         <div class="more-options">
-            <label for="moreOptions" class="more-options-icon"></label>
-            <input type="checkbox" class="more-options-checkbox"/>
-            <label for="moreOptions" class="more-options-label"></label>
+            <label class="more-options-icon"></label>
+            <input type="checkbox" class="more-options-checkbox" />
+            <label class="more-options-label"></label>
         </div>
     </div>
 </div>
