--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -2,14 +2,14 @@
     <div class="fl-container-flex60 fl-force-left preference flc-uiOptions-contrastPanel">
 
         <div class="contrastPreferenceGroup">
-            <div class="flc-uiOptions-contrast fl-uiOptions-text"></div>
+            <div class="gpii-prefsEditor-contrast fl-uiOptions-text"></div>
         </div>
 
     </div>
     
     <div class="fl-container-flex60 fl-force-left preference">
     
-    	<div class="flc-uiOptions-increaseSizePanel">
+    	<div class="gpii-prefsEditor-increaseSizePanel">
     	</div>
     </div>
 
