--- a/src/shared/adjusters/html/speakTextCollectiveTemplate.html
+++ b/src/shared/adjusters/html/speakTextCollectiveTemplate.html
@@ -5,15 +5,16 @@
 <input type="checkbox" id="presetButton" class="gpii-speakTextPresetButton"/>
 <label for="presetButton" class="gpii-speakTextPresetButton-label preset-button-label"></label>
 <label for="presetButton" class="white-baloon-icon"></label>
-<label for="presetButton" class="white-tick-icon"></label><br><br><br><br><br>
+<label for="presetButton" class="white-tick-icon"></label><br>
+<div class="spacing-ensurer"></div>
 
 <div class="preference">
-    <div class="fully-expanded">
+    <div class="fully-expanded speakText-screenReaderTTSEnabled-element">
         <h3><label for="screenReaderTTSEnabled" class="gpii-screenReaderTTSEnabled-label switch"></label></h3>
         <div id="screen-reader-onoff" class="fl-uiOptions-onoff">
             <input type="checkbox" id="screenReaderTTSEnabled" class="gpii-screenReaderTTSEnabled"/>
             <label for="screenReaderTTSEnabled">
-                <span class="fl-uiOptions-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF">
+                <span class="fl-uiOptions-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF" tabindex="0">
                     <span class="fl-uiOptions-switch-inner"></span>
                 </span>
             </label>
@@ -49,23 +50,23 @@
         </div>
 
         <div class="speakText-announceCapitals-element">
-            <input type="checkbox" id="announce-uppercase" class="gpii-announceCapitals" />
-            <label for="announce-uppercase" class="checkbox-label"><span class="gpii-announceCapitals-label checkbox-span"></span></label>
+            <input type="checkbox" id="announce-uppercase" class="gpii-announceCapitals" tabindex="-1"/>
+            <label for="announce-uppercase" class="checkbox-label" ><span class="gpii-announceCapitals-label checkbox-span" tabindex="0"></span></label>
         </div>
 
         <div class="speakText-speakTutorialMessages-element">
-            <input type="checkbox" id="announce-instructions" class="gpii-speakTutorialMessages" />
-            <label for="announce-instructions" class="checkbox-label"><span class="gpii-speakTutorialMessages-label checkbox-span"></span></label>
+            <input type="checkbox" id="announce-instructions" class="gpii-speakTutorialMessages" tabindex="-1"/>
+            <label for="announce-instructions" class="checkbox-label" ><span class="gpii-speakTutorialMessages-label checkbox-span" tabindex="0"></span></label>
         </div><br>
         <div class="speak-text-label"> Read-back </div>
         <div class="speakText-keyEcho-element">
-            <input type="checkbox" id="echo-letter" class="gpii-keyEcho" />
-            <label for="echo-letter" class="checkbox-label"><span class="gpii-keyEcho-label checkbox-span"></span></label><br>
+            <input type="checkbox" id="echo-letter" class="gpii-keyEcho" tabindex="-1"/>
+            <label for="echo-letter" class="checkbox-label" ><span class="gpii-keyEcho-label checkbox-span" tabindex="0"></span></label><br>
         </div>
 
         <div class="speakText-wordEcho-element">
-            <input type="checkbox" id="echo-word" class="gpii-wordEcho" />
-            <label for="echo-word" class="checkbox-label"><span class="gpii-wordEcho-label checkbox-span"></span></label>
+            <input type="checkbox" id="echo-word" class="gpii-wordEcho" tabindex="-1"/>
+            <label for="echo-word" class="checkbox-label" ><span class="gpii-wordEcho-label checkbox-span" tabindex="0"></span></label>
         </div>
 
         <div class="speakText-screenReaderBrailleOutput-element">
@@ -85,7 +86,6 @@
     <div class="partially-expanded">
         <div class="more-options">
             <label class="more-options-icon"></label>
-            <input type="checkbox" class="more-options-checkbox" />
             <label class="more-options-label"></label>
         </div>
     </div>
