GPII-153: Unused styles removed from style.css, a more appropriate name for some classes defined.

--- a/src/shared/adjusters/html/speakTextCollectiveTemplate.html
+++ b/src/shared/adjusters/html/speakTextCollectiveTemplate.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="partially-expanded">
-        <div id="speech-rate" class="speech-rate-class">
+        <div class="speakText-speechRate-element">
             <div class="gpii-speechRate">
                 <label class="gpii-speechRate-label speak-text-label" for="speech-rate-input" id="speechRateLabel"></label><br>
                 <label class="gpii-textfieldStepper-decrement gpii-speechRate-minus" id="speechRateMinus"></label>
