Implemented "class names for js selectors: gpiic-<componentName>-<rest of class name>" along with some minor selector fixes.

--- a/src/shared/adjusters/html/UIOptionsTemplate-contrastNew.html
+++ b/src/shared/adjusters/html/UIOptionsTemplate-contrastNew.html
@@ -1,17 +1,17 @@
-<input type="checkbox" id="preferenceSwitchContrast" class="flc-uiOptions-constrastInput"/>
+<input type="checkbox" id="preferenceSwitchContrast" class="gpiic-contrast-constrastInput"/>
 <div class="headerImage fl-adjuster-icons fl-adjuster-icons-sept-12">
-    <label class="headerTitle"></label>
+    <label class="gpii-headerTitle gpiic-headerTitle"></label>
     <div class="headerImageTick fl-adjuster-icons fl-adjuster-icons-sept-12"></div>
 </div>
-<label class="headerTitle headerClickableLabel" for="preferenceSwitchContrast"></label>
+<label class="gpii-headerTitle gpiic-headerTitle headerClickableLabel" for="preferenceSwitchContrast"></label>
 
 <input type="checkbox" id="addToMyPreferencesContrast"/>
 <div class="fl-adjuster-icons fl-adjuster-icons-additional addToMyPreferencesStar">
 </div>
-<label class="addToMyPreferencesLabel" for="addToMyPreferencesContrast" tooltip-checked="" tooltip-unchecked="" title=""></label>
+<label class="gpii-addToMyPreferencesLabel gpiic-addToMyPreferencesLabel" for="addToMyPreferencesContrast" tooltip-checked="" tooltip-unchecked="" title=""></label>
 <br/>
-<div class="fl-uiOptions-category flc-uiOptions-category fl-uiOptions-text">
-    <h2><label class="flc-uiOptions-contrast-label"></label></h2>
+<div class="fl-uiOptions-category gpiic-category fl-uiOptions-text">
+    <h2><label class="gpiic-contrast-contrastLabel"></label></h2>
 
     <div class="fl-uiOptions-preview-per-setting-container">
         <div class="fl-adjuster-icons fl-uiOptions-preview-per-setting-eye"></div>
