--- a/src/shared/adjusters/html/UIOptionsTemplate-cursorSize.html
+++ b/src/shared/adjusters/html/UIOptionsTemplate-cursorSize.html
@@ -1,5 +1,5 @@
-<div class="flc-uiOptions-cursor-size">
-    <h2><!-- <span class="fl-icon-size"></span> --><label class="flc-uiOptions-cursor-size-label" for="cursor-size"></label></h2>
+<div class="gpiic-increaseSize-cursor-size">
+    <h2><!-- <span class="fl-icon-size"></span> --><label class="gpiic-increaseSize-cursor-size-label" for="cursor-size"></label></h2>
 
     <div class="fl-adjuster-icons fl-uiOptions-preview-per-setting-container">
         <div class="fl-adjuster-icons fl-uiOptions-preview-per-setting-eye"></div>
@@ -13,6 +13,6 @@
             <div class="flc-textfieldSlider-slider fl-force-left fl-slider fl-slider-horz"> </div>
             <div class="fl-adjuster-icons fl-icon-big-cursor" role="img"></div>            
         </div>
-        <div class="fl-slider-input" style="display:none;"><input id="cursor-size" class="flc-textfieldSlider-field" type="text" /> <span class="flc-uiOptions-multiplier"></span></div>
+        <div class="fl-slider-input" style="display:none;"><input id="cursor-size" class="flc-textfieldSlider-field" type="text" /></div>
     </div>
 </div>
