--- a/src/shared/adjusters/html/UIOptionsTemplate-increaseSize.html
+++ b/src/shared/adjusters/html/UIOptionsTemplate-increaseSize.html
@@ -1,20 +1,20 @@
-<input type="checkbox" id="preferenceSwitchIncreaseSize"/>
+<input type="checkbox" id="preferenceSwitchIncreaseSize" class="gpiic-increaseSize-preferenceSwitch"/>
 <div class="headerImage fl-adjuster-icons fl-adjuster-icons-sept-12">
-    <label class="headerTitle"></label>
+    <label class="gpii-headerTitle gpiic-headerTitle"></label>
     <div class="headerImageTick fl-adjuster-icons fl-adjuster-icons-sept-12"></div>
 </div>
-<label class="headerTitle headerClickableLabel" for="preferenceSwitchIncreaseSize"></label>
+<label class="gpii-headerTitle gpiic-headerTitle headerClickableLabel" for="preferenceSwitchIncreaseSize"></label>
 
 <input type="checkbox" id="addToMyPreferencesIncreaseSize"/>
 <div class="fl-adjuster-icons fl-adjuster-icons-additional addToMyPreferencesStar">
 </div>
-<label class="addToMyPreferencesLabel" for="addToMyPreferencesIncreaseSize" tooltip-checked="" tooltip-unchecked="" title=""></label>
+<label class="gpii-addToMyPreferencesLabel gpiic-addToMyPreferencesLabel" for="addToMyPreferencesIncreaseSize" tooltip-checked="" tooltip-unchecked="" title=""></label>
 
 <div class="increaseSizePreferenceGroup">
 
-	<div class="flc-uiOptions-text-size fl-uiOptions-category flc-uiOptions-category fl-uiOptions-text">
+	<div class="flc-uiOptions-text-size fl-uiOptions-category gpiic-category fl-uiOptions-text">
 		<div class="flc-uiOptions-plus-minus-numerical">
-		    <h2><label class="flc-uiOptions-plus-minus-numerical-label"></label></h2>
+		    <h2><label class="gpiic-increaseSize-plusMinusNumericalLabelTextSize"></label></h2>
 		    
 		    <div class="fl-uiOptions-preview-per-setting-container">
 		        <div class="fl-adjuster-icons fl-uiOptions-preview-per-setting-eye"></div>
@@ -23,16 +23,16 @@
 		    </div>
 		
 		    <div class="fl-uiOptions-plus-minus-numerical-widget">
-		        <label class="fl-uiOptions-plus-minus-numerical-minus flc-uiOptions-plus-minus-numerical-minus"></label>
-		        <input type="text" class="fl-uiOptions-plus-minus-numerical-value flc-uiOptions-plus-minus-numerical-value fl-inputs"/>
-		        <label class="fl-uiOptions-plus-minus-numerical-plus flc-uiOptions-plus-minus-numerical-plus"></label>
+		        <label class="fl-uiOptions-plus-minus-numerical-minus gpiic-incresaeSize-plusMinusNumericalMinusTextSize"></label>
+		        <input type="text" class="fl-uiOptions-plus-minus-numerical-value gpiic-increaseSize-plusMinusNumericalValueTextSize fl-inputs"/>
+		        <label class="fl-uiOptions-plus-minus-numerical-plus gpiic-increaseSize-plusMinusNumericalPlusTextSize"></label>
 		    </div>
 		</div>
 	</div>
 
-	<div class="fl-uiOptions-category flc-uiOptions-category fl-uiOptions-text">
-		<div class="flc-uiOptions-cursor-size">
-		    <h2><!-- <span class="fl-icon-size"></span> --><label class="flc-uiOptions-cursor-size-label" for="cursor-size"></label></h2>
+	<div class="fl-uiOptions-category gpiic-category fl-uiOptions-text">
+		<div class="gpiic-increaseSize-cursor-size">
+		    <h2><!-- <span class="fl-icon-size"></span> --><label class="gpiic-increaseSize-cursor-size-label" for="cursor-size"></label></h2>
 		
 		    <div class="fl-adjuster-icons fl-uiOptions-preview-per-setting-container">
 		        <div class="fl-adjuster-icons fl-uiOptions-preview-per-setting-eye"></div>
@@ -46,14 +46,14 @@
 		            <div class="flc-textfieldSlider-slider fl-force-left fl-slider fl-slider-horz"> </div>
 		            <div class="fl-adjuster-icons fl-icon-big-cursor" role="img"></div>            
 		        </div>
-		        <div class="fl-slider-input" style="display:none;"><input id="cursor-size" class="flc-textfieldSlider-field" type="text" /> <span class="flc-uiOptions-multiplier"></span></div>
+		        <div class="fl-slider-input" style="display:none;"><input id="cursor-size" class="flc-textfieldSlider-field" type="text" /></div>
 		    </div>
 		</div>
 	</div>
 	
-	<div class="flc-uiOptions-magnifier fl-uiOptions-category flc-uiOptions-category fl-uiOptions-text">
+	<div class="flc-uiOptions-magnifier fl-uiOptions-category gpiic-category fl-uiOptions-text">
 		<div class="flc-uiOptions-plus-minus-numerical">
-		    <h2><label class="flc-uiOptions-plus-minus-numerical-label-magnifier"></label></h2>
+		    <h2><label class="gpiic-increaseSize-plusMinusNumericalLabelMagnifier"></label></h2>
 		    
 		    <div class="fl-uiOptions-preview-per-setting-container">
 		        <div class="fl-adjuster-icons fl-uiOptions-preview-per-setting-eye"></div>
@@ -62,37 +62,37 @@
 		    </div>
 		
 		    <div class="fl-uiOptions-plus-minus-numerical-widget">
-		        <label class="fl-uiOptions-plus-minus-numerical-minus flc-uiOptions-plus-minus-numerical-minus-magnifier"></label>
-		        <input type="text" class="fl-uiOptions-plus-minus-numerical-value flc-uiOptions-plus-minus-numerical-value-magnifier fl-inputs"/>
-		        <label class="fl-uiOptions-plus-minus-numerical-plus flc-uiOptions-plus-minus-numerical-plus-magnifier"></label>
+		        <label class="fl-uiOptions-plus-minus-numerical-minus gpiic-increaseSize-plusMinusNumericalMinusMagnifier"></label>
+		        <input type="text" class="fl-uiOptions-plus-minus-numerical-value gpiic-increaseSize-plusMinusNumericalValueMagnifier fl-inputs"/>
+		        <label class="fl-uiOptions-plus-minus-numerical-plus gpiic-increaseSize-plusMinusNumericalPlusMagnifier"></label>
 		    </div>
 		</div>
 	</div>
 
-	<input type="checkbox" id="preferenceSwitchIncreaseSizeExtra"/>
-    <div class="fl-uiOptions-category-hidden flc-uiOptions-category-hidden fl-uiOptions-text">
-		<div class="fl-uiOptions-category flc-uiOptions-category fl-uiOptions-text">
+	<input type="checkbox" id="preferenceSwitchIncreaseSizeExtra" class="gpiic-increaseSize-preferenceSwitchExtra"/>
+    <div class="fl-uiOptions-category-hidden gpiic-category-hidden fl-uiOptions-text">
+		<div class="fl-uiOptions-category gpiic-category fl-uiOptions-text">
 			<h2>
-			    <label class="flc-uiOptions-magnifierPosition-heading"></label>
+			    <label class="gpiic-increaseSize-magnifierPositionHeading"></label>
 			</h2>
-			<div class="flc-uiOptions-magnifierPositionRow fl-choice">
-			    <input type="radio" class="flc-uiOptions-magnifierPositionInput" name="magnifierPosition" id="magnifierPosition" />
+			<div class="gpiic-increaseSize-magnifierPositionRow fl-choice">
+			    <input type="radio" class="gpiic-increaseSize-magnifierPositionInput" name="magnifierPosition" id="magnifierPosition" />
 			    <div class="fl-indicator"></div>
-			    <label for="magnifierPosition" class="fl-uiOptions-magnifierPosition-label flc-uiOptions-magnifierPosition-label" tooltip="" title="">
+			    <label for="magnifierPosition" class="fl-uiOptions-magnifierPosition-label gpiic-increaseSize-magnifierPositionLabel" tooltip="" title="">
 			        <span class="fl-preview-A"></span>
 			        <span class="fl-hidden-accessible"></span>
 			        <div class="fl-crossout"></div>
 			    </label>
 			</div>
 		</div>
-		<div class="fl-uiOptions-category flc-uiOptions-category fl-uiOptions-text">
+		<div class="fl-uiOptions-category gpiic-category fl-uiOptions-text">
 			<h2>
-			    <label class="flc-uiOptions-magnifierFollows-heading"></label>
+			    <label class="gpiic-increaseSize-magnifierFollowsHeading"></label>
 			</h2>
-			<div class="fl-uiOptions-magnifierFollowsRow flc-uiOptions-magnifierFollowsRow fl-choice">
-			    <input type="checkbox" class="flc-uiOptions-magnifierFollowsInput" name="magnifierFollows" id="magnifierFollows" />
+			<div class="fl-uiOptions-magnifierFollowsRow gpiic-increaseSize-magnifierFollowsRow fl-choice">
+			    <input type="checkbox" class="gpiic-increaseSize-magnifierFollowsInput" name="magnifierFollows" id="magnifierFollows" />
 			    <!-- <div class="fl-indicator"></div> -->
-			    <label for="magnifierFollows" class="gpii-prefsEditor-magnifierFollows-label">
+			    <label for="magnifierFollows" class="gpiic-increaseSize-magnifierFollowsLabel gpii-prefsEditor-magnifierFollowsLabel">
 			        <span class="fl-preview-A"></span>
 			        <span class="fl-hidden-accessible"></span>
 			        <div class="fl-crossout"></div>
@@ -101,5 +101,5 @@
 		</div>
     </div>
 
-    <label for="preferenceSwitchIncreaseSizeExtra" class="moreLess fl-uiOptions-category flc-uiOptions-category">&nbsp;</label>
+    <label for="preferenceSwitchIncreaseSizeExtra" class="gpii-moreLess gpiic-moreLess fl-uiOptions-category gpiic-category">&nbsp;</label>
 </div>
