--- a/src/shared/adjusters/html/UIOptionsTemplate-magnifier.html
+++ b/src/shared/adjusters/html/UIOptionsTemplate-magnifier.html
@@ -4,7 +4,7 @@
         <div class="fl-force-left">
             <div class="flc-textfieldSlider-slider fl-force-left fl-slider fl-slider-horz"> </div>
         </div>
-        <div class="fl-slider-input" style=""><input id="magnifier" class="flc-textfieldSlider-field" type="text" /> <span class="flc-uiOptions-multiplier"></span></div>
+        <div class="fl-slider-input" style=""><input id="magnifier" class="flc-textfieldSlider-field" type="text" /></div>
         <br/>
         <div class="fl-force-left fl-icon-magnifierOFF"></div>
         <div class="fl-force-right fl-icon-magnifierMAX"></div>            
