--- a/src/shared/adjusters/html/UIOptionsTemplate-magnifierFollows.html
+++ b/src/shared/adjusters/html/UIOptionsTemplate-magnifierFollows.html
@@ -1,10 +1,10 @@
 <h2>
-    <label class="flc-uiOptions-magnifierFollows-heading"></label>
+    <label class="gpiic-increaseSize-magnifierFollowsHeading"></label>
 </h2>
-<div class="fl-uiOptions-magnifierFollowsRow flc-uiOptions-magnifierFollowsRow fl-choice">
-    <input type="checkbox" class="flc-uiOptions-magnifierFollowsInput" name="magnifierFollows" id="magnifierFollows" />
+<div class="fl-uiOptions-magnifierFollowsRow gpiic-increaseSize-magnifierFollowsRow fl-choice">
+    <input type="checkbox" class="gpiic-increaseSize-magnifierFollowsInput" name="magnifierFollows" id="magnifierFollows" />
     <!-- <div class="fl-indicator"></div> -->
-    <label for="magnifierFollows" class="gpii-prefsEditor-magnifierFollows-label">
+    <label for="magnifierFollows" class="gpiic-increaseSize-magnifierFollowsLabel gpii-prefsEditor-magnifierFollowsLabel">
         <span class="fl-preview-A"></span>
         <span class="fl-hidden-accessible"></span>
         <div class="fl-crossout"></div>
